--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>mileStone Tasker</title>
+    <title>2dayPlan - To Do Application for daily notes and tasker</title>
   </head>
   <body>
     <noscript>
