Added meta description

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>2dayPlan - To Do Application for daily notes and tasker</title>
+    <meta name='description' content='2dayPlan (today plan) is a simple to-do web application for everyday task management. Simply add a task description and set the target date to begin'/>
   </head>
   <body>
     <noscript>
